// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text renders default 1`] = `
<Text
  style={
    [
      {
        "letterSpacing": 0,
        "textAlign": "left",
        "textAlignVertical": "center",
      },
      {
        "color": "#737680",
        "fontFamily": "ProductSansRegular",
        "fontSize": 14,
      },
      {},
      undefined,
    ]
  }
>
  Lorem ipsum dolor sit amet
</Text>
`;

exports[`Text renders with custom color, fontsize 1`] = `
<Text
  style={
    [
      {
        "letterSpacing": 0,
        "textAlign": "left",
        "textAlignVertical": "center",
      },
      {
        "color": "#737680",
        "fontFamily": "ProductSansRegular",
        "fontSize": 14,
      },
      {
        "color": "#5ece7b",
        "fontSize": 40,
      },
      undefined,
    ]
  }
>
  Lorem ipsum dolor sit amet
</Text>
`;

exports[`Text renders with variant description 1`] = `
<Text
  style={
    [
      {
        "letterSpacing": 0,
        "textAlign": "left",
        "textAlignVertical": "center",
      },
      {
        "color": "#1d1f22",
        "fontFamily": "ProductSansRegular",
        "fontSize": 12,
      },
      {},
      undefined,
    ]
  }
>
  Lorem ipsum dolor sit amet
</Text>
`;

exports[`Text renders with variant heading 1`] = `
<Text
  style={
    [
      {
        "letterSpacing": 0,
        "textAlign": "left",
        "textAlignVertical": "center",
      },
      {
        "color": "#000",
        "fontFamily": "ProductSansBold",
        "fontSize": 24,
        "fontWeight": 700,
      },
      {},
      undefined,
    ]
  }
>
  Lorem ipsum dolor sit amet
</Text>
`;

exports[`Text renders with variant subTitle 1`] = `
<Text
  style={
    [
      {
        "letterSpacing": 0,
        "textAlign": "left",
        "textAlignVertical": "center",
      },
      {
        "color": "#000",
        "fontFamily": "RobotoRegular",
        "fontSize": 16,
        "fontWeight": 700,
      },
      {},
      undefined,
    ]
  }
>
  Lorem ipsum dolor sit amet
</Text>
`;

exports[`Text renders with variant title 1`] = `
<Text
  style={
    [
      {
        "letterSpacing": 0,
        "textAlign": "left",
        "textAlignVertical": "center",
      },
      {
        "color": "#000",
        "fontFamily": "NunitoSemiBold",
        "fontSize": 20,
        "fontWeight": 700,
      },
      {},
      undefined,
    ]
  }
>
  Lorem ipsum dolor sit amet
</Text>
`;
